--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <div.1><img/><img src='imagen1.jpg' width="60px" height="60px"/></div.1>
         
         <button type="submit" aria-label="escola" onclick="location.href='index.html'">Home</button>
-        <button type="submit" aria-label="escola" onclick="location.href='file://C:\Users\renato.izolino\Desktop\DevSis10\templates\listacurso.html'">Lista de cursos</button>
+        <button type="submit" aria-label="escola" onclick="location.href='listacurso.html'">Lista de cursos</button>
         <button type="submit" aria-label="escola" onclick="location.href='detalhe.html'">Detalhes do curso</button>
         <button type="submit" aria-label="escola" onclick="location.href='disciplina.html'">Disciplina</button>
         <button type="submit" aria-label="escola" onclick="location.href='noticias.html'">Notícias</button>
